data/derived/comb/progs/unify/prog2284.ml.out
Characters 111-142:
  | Sine(e1) -> let ans = sin(pi *. eval(e1,x,y)) in Printf.printf "sine is %f " 2.0
                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit but an expression was expected of type
         float
